Changelog
=========

1.9 (xx.xx.xxxx) - IN DEVELOPMENT
~~~~~~~~~~~~~~~~



1.8 (xx.xx.xxxx) - IN DEVELOPMENT
~~~~~~~~~~~~~~~~

 * New page privacy options (Shawn Makinson, Tom Miller, Luca Perico, Matt Westcott)
 * New 'bulk delete' permission type for deleting pages with children (Matt Westcott)
 * Elasticsearch 5 support (Karl Hobley)
 * Added support of a custom `edit_handler` in site settings (Axel Haustant)
 * Added `get_landing_page_template` getter method to `AbstractForm` (Gagaro)
 * Added `Page.get_admin_display_title` method to override how the title is displayed in the admin (Henk-Jan van Hasselaar)
 * Added support for specifying custom HTML attributes for table rows on ModelAdmin index pages (Andy Babic)
 * Added `first_common_ancestor` method to `PageQuerySet` (Tim Heap)
 * Page chooser now opens at the deepest ancestor page that covers all the pages of the required page type (Tim Heap)
 * `PageChooserBlock` now accepts a `target_model` option to specify the required page type (Tim Heap)
 * Modeladmin forms now respect `fields` / `exclude` options passed on custom model forms (Thejaswi Puthraya)
 * Added new StreamField block type `StaticBlock` (Benoît Vogel)
 * Added new StreamField block type `BlockQuoteBlock` (Scot Hacker)
 * Updated Cloudflare cache module to use the v4 API (Albert O'Connor)
 * Added `exclude_from_explorer` attribute to the `ModelAdmin` class to allow hiding instances of a page type from Wagtail's explorer views (Andy Babic)
 * Added `above_login`, `below_login`, `fields` and `login_form` customisation blocks to the login page template (Tim Heap)
 * `ChoiceBlock` now accepts a callable as the choices list (Mikalai Radchuk)
 * Redundant action buttons are now omitted from the root page in the explorer (Nick Smith)
 * Locked pages are now disabled from editing at the browser level (Edd Baldry)
 * Added `in_site` method for filtering page querysets to pages within the specified site (Chris Rogers)