@@ -4,6 +4,7 @@ Changelog
 1.9 (xx.xx.xxxx) - IN DEVELOPMENT
 ~~~~~~~~~~~~~~~~
 
+ * View live / draft links in the admin now consistently open in a new window (Marco Fucci)
 
 
 1.8 (xx.xx.xxxx) - IN DEVELOPMENT
